# kollektiv

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  Makefile  README.md  api_contract_and_development.md  app.py  chainlit_app.py  chainlit_poc.py  main.py  nixpacks.toml  pyproject.toml  test_chunks_anthropic.json  test_chunks_stripe.json  test_logging.py  # Create a new file
.chainlit/: config.toml
.codiumai/: local_index.json
.github/: pull_request_template.md  release-drafter.yml
.github/workflows/: ci-code-quality.yaml  ci-services.yaml  ci-setup.yaml  ci-tests.yaml  ci.yaml  ci_pipeline.yml  ci_pr_description.yml  ci_speedup.yml  docker-deploy.yml
config/: .env.example
config/environments/: .env.example
docs/: processing_pipeline_logical_view.md  processing_pipeline_specification.md  system-design.md  tmp_command_flow.md  user-guide.md
docs/changelog/: CHANGELOG.md
docs/design/: 10x-ci-speedup.md  system-design.md
docs/feature-scoping/0-2-0/: evals[blocked].md  rename.md  telemetry-tbd.md  vector-storage-imp.md
docs/feature-spec/: arq-migration.md  content-ingestion.md  uv-migration.md
docs/features/: content-feature-new.md
input_docs/: 912b8b29-0dea-4374-be62-f51e373c2ffb.md
output_chunks/: 912b8b29-0dea-4374-be62-f51e373c2ffb.md.json
scripts/: enqueue_test_job.py  inspect_anthropic.py
scripts/docker/: .dockerignore  Dockerfile  compose.yaml  docker-compose.yml  entrypoint.sh
scripts/external_deps/: docker-compose.yml
scripts/maintenance/: generate_structure.py
src/: app.py  cli.py
src/api/: dependencies.py  deps.py  routes.py
src/api/chainlit/: chainlit_types.py  command_handler.py  message_handler.py
src/api/client/: api_client.py
src/api/config/: cors_config.py
src/api/handlers/: error_handlers.py
src/api/middleware/: auth.py  debug_middleware.py  rate_limit.py
src/api/system/: health.py  sentry_debug.py
src/api/system/health/: health_router.py
src/api/system/webhooks/: webhook_router.py
src/api/v0/chat/: chat_router.py
src/api/v0/content/: crawl_router.py  document_router.py  schemas.py  sources.py
src/api/v0/endpoints/: chat.py  sources.py  webhooks.py
src/api/v0/schemas/: base_schemas.py  chat_schemas.py  health_schemas.py  sources_schemas.py  webhook_schemas.py
src/core/: _exceptions.py
src/core/chat/: claude_assistant.py  conversation_manager.py  events.py  exceptions.py  flow_manager.py  llm_assistant.py  prompt_manager.py  summary_manager.py  system_prompt.py  tool_definitions.py  tool_manager.py
src/core/chat/prompts/: prompts.yaml
src/core/chat/tools/: tools.yaml
src/core/content/: chunker.py  chunker_old.py  chunking_pipeline.md  crawler.py  unstructured_chunker.py
src/core/content/crawler/: crawler.py  jobs.json
src/core/decorators/: __init__.py
src/core/search/: embedding_manager.py  reranker.py  retriever.py  vector_db.py
src/core/system/: job_manager.py
src/core/tasks/: processing_task.py
src/crawling/: crawler.py  exceptions.py  file_manager.py  job_manager.py  models.py  webhook_handler.py
src/data/example/: example.md
src/data/processed/: docs_anthropic_com_en_docs_20241030_104114-chunked.json
src/generation/: claude_assistant.py  summary_manager.py
src/infra/: decorators.py  logger.py  service_container.py  settings.py
src/infra/arq/: arq_settings.py  redis_pool.py  serializer.py  task_definitions.py  test_arq.py  worker.py  worker_services.py
src/infra/celery/: scheduler.py  serialization_test.py  tasks.py  worker.py  worker_services.py
src/infra/data/: data_repository.py  redis_repository.py
src/infra/events/: channels.py  event_consumer.py  event_publisher.py
src/infra/misc/: ngrok_service.py
src/infra/rq/: rq_manager.py  rq_worker.py  tasks.py  worker_services.py
src/infrastructure/: service_container.py
src/infrastructure/common/: decorators.py  file_manager.py  logger.py  output_formatter.py
src/infrastructure/config/: logger.py  settings.py
src/infrastructure/rq/: rq_manager.py  rq_worker.py  tasks.py  worker.py  worker_services.py
src/infrastructure/storage/: data_repository.py  redis_repository.py
src/infrastructure/storage/supabase/: supabase_operations.py
src/infrastructure/workers/: tasks.py
src/interface/: command_handler.py  flow_manager.py  message_handler.py  webhook_router.py
src/kollektiv/: manager.py
src/models/: base_models.py  chat_models.py  content_models.py  event_models.py  firecrawl_models.py  job_models.py  llm_models.py  pubsub_models.py  task_models.py  vector_models.py
src/models/common/: job_models.py  jobs.py  webhooks.py
src/models/content/: content_source_models.py  firecrawl_models.py
src/models/events/: webhook_models.py
src/models/job_management/: job_models.py
src/processing/: chunking.py
src/services/: chat_service.py  content_service.py  data_service.py  evaluation_service.py  event_service.py  job_manager.py  manager.py  manager_deprecate.py  pydantic_serialization.py  source_summary.md  webhook_handler.py
src/services/webhooks/: base_handler.py  webhook_handler.py
src/src/vector_storage/chroma/: chroma.sqlite3
src/ui/: terminal_ui.py
src/utils/: config.py  decorators.py  logger.py
src/vector_storage/: document_summaries.json  vector_db.py
src/workers/: crawl_worker.py
tests/: conftest.py  crawler_test_setup.md  test_ClaudeAssistant.py  test_app.py  test_chunking.py  test_claude_assistant.py  test_crawler.py  test_settings.py  test_vector_db.py
tests/data/: __init__.py
tests/e2e/: test_content_flow.py
tests/infrastructure/: test_settings.py
tests/integration/: test_app.py  test_chat_service.py  test_claude_assistant.py
tests/integration/core/chat/: test_llm_assistant_integration.py
tests/integration/services/: test_chat_service.py
tests/unit/: test_app.py  test_chat_service.py  test_chunking.py  test_claude_assistant.py  test_cli.py  test_crawler.py  test_llm_assistant.py  test_settings.py  test_supabase_client.py  test_vector_db.py
tests/unit/services/: test_content_service.py
(+20 files in other folders)
